force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/cgcloud__Job_DL_Job_Definition_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the specific questions/surveys used in the job definition list.</description>
    <label>Question</label>
    <nameField>
        <displayFormat>JDL-{0000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>