force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Composite_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>