force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Condition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Activity Job Definition Template that represents parent condition.</description>
    <label>Condition</label>
    <referenceTo>cgcloud__Job_DL_Job_Definition_Template__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Job_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>