force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Condition_Answers__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Answers__c</fullName>
    <description>List of relevant answers for the parent condition.</description>
    <label>Answers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>