force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Condition_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Description__c</fullName>
    <description>Description of Activity Job Definition Template of parent condition.</description>
    <formula>cgcloud__Condition__r.cgcloud__Job_Definition_Template__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition Description</label>
    <type>Text</type>
</CustomField>