force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Condition_Operator__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Operator__c</fullName>
    <description>Operator which is applied to the Conditional answer.</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Not In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>