force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Excluded__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to exclude activity job definition template from execution of call.</description>
    <label>Excluded</label>
    <type>Checkbox</type>
</CustomField>