force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Job_Action_Success__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Action_Success__c</fullName>
    <label>Job Action Success</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cgcloud__Mandatory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Detach</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>