force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Job_Definition_List__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_List__c</fullName>
    <label>Activity</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Job_Definition_List__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Job_Definition_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>