force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Job_Definition_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Definition Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Job_Definition_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Job_Definition_Template__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Job_Definition_Template__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Job_Definition_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>