force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Job_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Template__c</fullName>
    <formula>cgcloud__Job_Definition_Template__r.cgcloud__Job_Template__r.Name</formula>
    <label>Job Template</label>
    <type>Text</type>
</CustomField>