force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Mandatory__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>