force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Measure_Type__c</fullName>
    <formula>TEXT(cgcloud__Job_Definition_Template__r.cgcloud__Measure_Type__c)</formula>
    <label>Measure Type</label>
    <type>Text</type>
</CustomField>