force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__POS_Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__POS_Composite_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>It is used to maintain the uniqueness of POS template.</description>
    <label>POS Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>