force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__POS_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__POS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POS Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__POS_Template__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__POS_Template__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Job_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>