force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__POS_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__POS_Type__c</fullName>
    <label>POS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>shelf</fullName>
            </value>
            <value>
                <fullName>ct</fullName>
            </value>
            <value>
                <fullName>smt</fullName>
            </value>
            <value>
                <fullName>vm</fullName>
            </value>
            <value>
                <fullName>sc</fullName>
            </value>
            <value>
                <fullName>refrigerator</fullName>
            </value>
            <value>
                <fullName>freezer</fullName>
            </value>
            <value>
                <fullName>dairycase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>