force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Presetting__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Presetting__c</fullName>
    <label>Presetting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>LastValue</fullName>
            </value>
            <value>
                <fullName>TargetValue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>