force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Save_Presetting__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Save_Presetting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Presetting</label>
    <type>Checkbox</type>
</CustomField>