force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Score__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Score__c</fullName>
    <description>Score of the question.</description>
    <label>Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>