force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Score_Relevant_Answers__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Score_Relevant_Answers__c</fullName>
    <description>List of relevant answers for the question.</description>
    <label>Score Relevant Answers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>