force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Sorts the Job definitions and auto-populated from Job_Definition_Template.Sort</description>
    <label>Sort</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>