force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/validationRules/cgcloud__Inactive_Condition_JDT.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Inactive_Condition_JDT</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(cgcloud__Condition__r.cgcloud__Job_Definition_Template__r.cgcloud__Active__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Condition__c</errorDisplayField>
    <errorMessage>Selected condition is not valid.</errorMessage>
</ValidationRule>