force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/validationRules/cgcloud__Mandatory_Flag_02.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Mandatory_Flag_02</fullName>
    <active>true</active>
    <description>Job Action Success must be &apos;Validation&apos; if the Mandatory is checked.</description>
    <errorConditionFormula>cgcloud__Mandatory__c &amp;&amp; NOT(ISPICKVAL(cgcloud__Job_Action_Success__c, &apos;Validation&apos;))</errorConditionFormula>
    <errorMessage>Job Action Success must be &apos;Validation&apos; if Mandatory is checked.</errorMessage>
</ValidationRule>