force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/validationRules/cgcloud__Operator_must_be_blank_for_no_condition.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Operator_must_be_blank_for_no_condition</fullName>
    <active>true</active>
    <description>Operator must be None if no condition is selected</description>
    <errorConditionFormula>AND( ISBLANK( cgcloud__Condition__c ) , NOT(ISBLANK(TEXT( cgcloud__Condition_Operator__c ))))</errorConditionFormula>
    <errorMessage>Operator must be None if no Condition is selected</errorMessage>
</ValidationRule>