force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/validationRules/cgcloud__Operator_must_be_selected_for_condition.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Operator_must_be_selected_for_condition</fullName>
    <active>true</active>
    <description>Operator must be selected if a condition is selected</description>
    <errorConditionFormula>AND(NOT( ISBLANK( cgcloud__Condition__c ) ), ISBLANK(TEXT( cgcloud__Condition_Operator__c )))</errorConditionFormula>
    <errorMessage>Operator must be selected if a Condition is selected</errorMessage>
</ValidationRule>