force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/validationRules/cgcloud__PosTypeAndPosTemplateNotNecesary.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__PosTypeAndPosTemplateNotNecesary</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Measure_Type__c != &apos;POS&apos; &amp;&amp; (NOT(ISBLANK(TEXT(cgcloud__POS_Type__c))) || NOT(ISBLANK(cgcloud__POS_Template__c)))</errorConditionFormula>
    <errorMessage>POS Type and POS Template must be selected if the Measure Type of the Job Definition Template is &apos;POS&apos;.</errorMessage>
</ValidationRule>