force-app/main/default/objects/cgcloud__Job_DL_Job_Definition_Template__c/validationRules/cgcloud__Save_Presetting_Conditional_Questions.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Save_Presetting_Conditional_Questions</fullName>
    <active>true</active>
    <description>Records with conditional questions cannot have save presetting selected</description>
    <errorConditionFormula>AND(NOT( ISBLANK( cgcloud__Condition__c ) ) , cgcloud__Save_Presetting__c = true)</errorConditionFormula>
    <errorMessage>Save Presetting can&apos;t be selected if there is a Condition question.</errorMessage>
</ValidationRule>